# cliNotes

./: .gitignore  Cargo.toml  Makefile  README.md  history.txt
.github/workflows/: rust.yml
sql/: init.sql
src/: dao.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src/ai/: mod.rs
src/interactive/: mod.rs  parser.rs
src/output/: mod.rs
tests/: dao_tests.rs  db_init.rs  db_init_test.rs  integration_test.rs
