[package]
name = "CliNotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.28"
clap = {version = "4.4.2", features = ["derive"]}
