[package]
name = "cli_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.29.0", features = ["chrono"]}
chrono = "0.4.28"
clap = {version = "4.4.2", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
rustyline = "14.0"
termimad = "0.27"


[dev-dependencies]
assert_cmd = "2.0"